tests/ui/inference/need_type_info/for-loop-nested-array-inference.stderr
error[E0282]: type annotations needed
  --> $DIR/for-loop-nested-array-inference.rs:8:13
   |
LL |             *tile = 0;
   |             ^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
